# toronto-open-events

./: .gitignore  CONTRIBUTING.md  README.md  overview.md  pyproject.toml  sources.yaml
.github/workflows/: build-data.yml
scraped_data/: babyg.jsonl  crows_theatre.jsonl  great_hall.jsonl  horseshoe_tavern.jsonl  phoenix.jsonl  the_garrison.jsonl
scraped_data/feeds/: babyg.xcal  crows_theatre.xcal  great_hall.xcal  horseshoe_tavern.xcal  phoenix.xcal  the_garrison.xcal
src/: .gitignore  abstract_scraper.py  scrapy.cfg
src/event_scrapers/event_scrapers/: pipelines.py
src/scrapy_event_scrapers/: middlewares.py
src/scrapy_event_scrapers/spiders/: babyg_spider.py  crows_theatre_spider.py  great_hall_spider.py  harbourfront_spider.py  horseshoe_tavern_spider.py  phoenix_spider.py
src/scripts/: create_xcal_feeds.py  dedupe_scraped_data.py  new_scraper.py  scrape_all.py
src/toronto_open_events/scrapy_event_scrapers/: pipelines.py  settings.py
src/toronto_open_events/scrapy_event_scrapers/spiders/: crows_theatre_spider.py  the_garrison_spider.py
src/toronto_open_events/scripts/: create_xcal_feeds.py  data_collection.py  dedupe_scraped_data.py  scrape_all.py  test_scraper.py
